fixed clear screen windows function